# realm-editor

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  realm-editor.rc  realm-editor.sln  realm-editor.vcxproj  realm-editor.vcxproj.filters  resource.h  setupmaker.bat
data/options/: realm-editor.json
scripts/: openfile.bat  openfile.py  savefile.bat  savefile.py
source/: main.cpp
source/system/: manager.cpp  manager.hpp
source/system/hud/: button.cpp  button.hpp  edit.cpp  edit.hpp  hud.cpp  hud.hpp
source/system/map/: map.cpp  map.hpp
source/system/model/: model.cpp  model.hpp  texture.cpp  texture.hpp
source/system/object/: viewElement.cpp  viewElement.hpp
source/system/palette/: palette.cpp  palette.hpp
source/system/text/: label.cpp  label.hpp  text.cpp  text.hpp
templates/: trigger.json
